--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/logo192.png"/>
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Courgette">
-    <link href='http://fonts.googleapis.com/css?family=Roboto'
+    <link href='https://fonts.googleapis.com/css?family=Roboto'
           rel='stylesheet' type='text/css'>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="theme-color" content="#000000"/>
