Change meta-data about the site

--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,10 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto'
           rel='stylesheet' type='text/css'>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <meta name="theme-color" content="#000000"/>
+    <meta name="theme-color" content="#fe6d8e"/>
     <meta
             name="description"
-            content="Web site created using create-react-app"
+            content="Nice-looking movie browsing react app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
     <!--
